# c-cpp

./: LICENSE  README.md
c-plugin/: CMakeLists.txt
c-plugin/app/: CMakeLists.txt
c-plugin/app/src/: main.c
c-plugin/libplugin/: CMakeLists.txt
c-plugin/libplugin/src/: plugin.c
cpp-http-client/: README.md
cpp-http-client/cpp-netlib/: CMakeLists.txt  Makefile  main.cpp
cpp-http-client/cpp-rest-sdk/: CMakeLists.txt  Makefile  main.cpp
cpp-http-client/curlpp/: .editorconfig  CMakeLists.txt  Makefile  main.cpp
cpp-http-client/poco/: CMakeLists.txt  Makefile  main.cpp
cpp-plugin/: CMakeLists.txt
cpp-plugin/app/: CMakeLists.txt
cpp-plugin/app/src/: main.cpp
cpp-plugin/libmyplugin/: CMakeLists.txt
cpp-plugin/libmyplugin/include/: MyPlugin.hpp
cpp-plugin/libmyplugin/src/: MyPlugin.cpp
cpp-plugin/libplugin/: CMakeLists.txt
cpp-plugin/libplugin/include/: Plugin.hpp
cpp-plugin/libplugin/src/: Plugin.cpp
debian-package-cmake/: README.md
debian-package-cmake/multiple-packages/: CMakeLists.txt
debian-package-cmake/multiple-packages/debian/: changelog  control  libmyutil.install  myprog.install
debian-package-cmake/multiple-packages/libmyutil/: CMakeLists.txt  Util.cpp  Util.hpp
debian-package-cmake/multiple-packages/myprog/: CMakeLists.txt  main.cpp
debian-package-cmake/single-package/: CMakeLists.txt
debian-package-cmake/single-package/debian/: changelog  control  rules
debian-package-cmake/test/: CMakeLists.txt  main.c
debian-package-cmake/test/debian/: changelog  control  test.install
debian-package-makefile/: README.md
debian-package-makefile/test/: Makefile  main.c
debian-package-makefile/test/debian/: changelog  control
